--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   },
   "dependencies": {
     "@sentry/electron": "^2.2.0",
+    "dotenv": "^8.2.0",
     "electron-store": "^7.0.1",
     "fix-path": "^3.0.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "puppeteer": "^6.0.0"
   },
   "build": {
     "appId": "com.yagoernandes.electrontray",
